# dns-tunneling-benchmark

./: .gitattributes  .gitignore  .gitmodules  README.md  docker-compose.yaml  experiment.py  packets-dns2tcp-20240910-154930.pcap  packets-dnstt-20240910-154444.pcap  packets-iodine-20240910-155333.pcap  requirements.txt  statistics.py
experiment/: .gitignore  README.md  docker-compose-client-browsing.yaml  docker-compose-client-dummy.yaml  docker-compose-client-dumpcap.yaml  docker-compose-client-file-transfer.yaml  docker-compose-client-iperf3.yaml  docker-compose-client-speedtest-cli.yaml  docker-compose-client-tun2socks.yaml  docker-compose-common.yaml  docker-compose-resolver.yaml  docker-compose-results.yaml  docker-compose-server-dummy.yaml  docker-compose-server-dumpcap.yaml  docker-compose-server-file-transfer.yaml  docker-compose-server-iperf3-dumpcap.yaml  docker-compose-server-iperf3.yaml  docker-compose-server-socks.yaml  docker-compose-server-speedtest-server.yaml  docker-compose-server-websites.yaml  docker-compose.yaml  lib.py  migrations.sql  producer.py  pyproject.toml  requirements.txt  tasks.py  worker.py
experiment/celery/artifacts/: 5e05e68a-628c-4dea-b1b5-9959ef2075a2.pcap  90b8918f-6e67-4de8-9fcf-590bb486e1b1-bidir.json  90b8918f-6e67-4de8-9fcf-590bb486e1b1-download.json  (+6 more)
experiment/src/: cli.py  tasks.py
experiment/tasks/: docker-big-files.yml  docker-compose.yaml  docker-destroy.yml  docker-iperf3.yml  docker-network.yml  docker-socks.yml  get-interface-name.yml  socks-client-download-files.yml  tcpdump-destroy.yml  tcpdump-setup.yml
(+124 files in other folders)
