[project]
name = "experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-on-whales==0.73.0",
    "typer==0.12.5",
    "celery==5.4.0",
    "psycopg2-binary==2.9.10",
    "SQLAlchemy==2.0.36",
    "pandas==2.2.3",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "timeout_decorator==0.5.0"
]
